# airflow-training

./: .gitignore  README.md  pyproject.toml
data/: customers.csv
infra/: airflow-values.yaml  main.tf  modules.tf  scale_airflow.sh  terraform.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
labs/generators/: random_customer.py  random_transactions.py
labs/lab1_basic_data_pipeline/: README.md  lab1_dag.py
labs/lab2_scheduling_and_dependencies/: README.md  lab2_dag.py  random_transactions.py
labs/lab3_data_loading_and_transformation/: README.md  lab3_dag.py
labs/lab4_complex_logic/: README.md  lab4_dag.py
labs/lab5_organize_tasks/: README.md
labs/lab6_dag_concurency/: README.md  lab6_dag.py
modules/M001/: pre_taskflow_dag.py  taskflow_dag.py
modules/M002/: operators.py  scheduling.py  sensors.py  task_lifecycle.py  taskflow_api.py  variables.py  xcoms.py
modules/M003/: operators.py  sensors.py  xcoms.py
modules/M004/: params.py
modules/M005/: branching.py  dynamic_dags.py  dynamic_task_mapping.py  taskgroups.py
modules/M006/: branching.py  conditionals.py  docstrings.py  dynamic_dags.py  dynamic_task_mapping.py  subdags.py  taskflow_api.py
modules/M007/: assets_demo_1_physical_asset.py  demo_deferrable_http.py
modules/M008/: sample_cli_commands.py
