[tool.poetry]
name = "airflow-training"
version = "0.1.1"
description = ""
authors = ["marcin <marcin@siudzinski.eu>"]

[tool.poetry.dependencies]
python = "~=3.8,<3.13"
apache-airflow = "~2.9"
pendulum = ">2.0.0"
faker = "^33.0.0"
duckdb = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
