[tool.poetry]
name = "airflow-training"
version = "0.1.1"
description = ""
authors = ["marcin <marcin@siudzinski.eu>"]

[tool.poetry.dependencies]
python = "~=3.12,<3.13"
apache-airflow = "~3.1"
pendulum = ">2.0.0"
faker = "^33.0.0"
duckdb = "^1.1.3"
apache-airflow-providers-slack = "8.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
